--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:600">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work%20Sans:300,500">
-    <title>Jammming</title>
+    <title>spotgen</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
